Add css autoprefixer support

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -11,3 +11,7 @@ body {
  font-family: 'Inconsolata';
  background-color: $light-gray;
 }
+
+#app {
+  display: flex; //it will auto prefix to -webkit, -ms, etc
+}
